about page text edit

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">UI/UX & Web (In Progress)</h4>
+                <h4 class="h4 service-item-title">UI/UX & Web</h4>
 
                 <p class="service-item-text">
-                  Exploring how to design secure, user-friendly digital experiences.
+                  (In Progress) Exploring how to design secure, user-friendly digital experiences.
                 </p>
               </div>
 
